# sevmgr

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  autogen_autotools.sh  configure.ac  sevmgr-config-python.cmake.in  sevmgr-config.cmake.in  sevmgr.pc.in  sevmgr.spec
doc/: CMakeLists.txt  doxygen_html.cfg.in
doc/images/: sevmgr_dependencies.ditaa  sevmgr_icon.ppm  sevmgr_logo.xcf
doc/local/: authors.doc  documentation.doc  features.doc  help_wanted.doc  howto_release.doc  index.doc  installation.doc  linking.doc  sevmgr_footer.html  sevmgr_header.html  users_guide.doc  verification.doc
man/: CMakeLists.txt  doxygen_man1.cfg.in  doxygen_man3.cfg.in  sevmgr-config.doc  sevmgr-library.doc  sevmgr.doc  sevmgr_demo.doc
sevmgr/: .gitignore  CMakeLists.txt  Makefile.am  SEVMGR_Exceptions.hpp  SEVMGR_Service.hpp  SEVMGR_Types.hpp
sevmgr/basic/: BasConst.cpp  BasConst_EventQueueManager.hpp  BasConst_SEVMGR_Service.hpp  BasParserTypes.hpp  Makefile.am  sources.mk
sevmgr/batches/: Makefile.am  sevmgr.cpp  sevmgr_demo.cpp  sevmgr_with_db.cpp  sources.mk
sevmgr/bom/: BomJSONExport.cpp  BomJSONExport.hpp  EventQueue.cpp  EventQueue.hpp  EventQueueKey.cpp  EventQueueKey.hpp  EventQueueTypes.hpp  Makefile.am  sources.mk
sevmgr/command/: EventQueueManager.cpp  EventQueueManager.hpp  Makefile.am  sources.mk
sevmgr/config/: Makefile.am  sevmgr-paths.hpp.in
sevmgr/core/: Makefile.am  sources.mk
sevmgr/factory/: FacSEVMGRServiceContext.cpp  FacSEVMGRServiceContext.hpp  Makefile.am  sources.mk
sevmgr/python/: Makefile.am  pysevmgr.cpp  pysevmgr.in  sources.mk
sevmgr/service/: Makefile.am  SEVMGR_Service.cpp  SEVMGR_ServiceContext.cpp  SEVMGR_ServiceContext.hpp  sources.mk
sevmgr/ui/cmdline/: sevmgr.cpp
test/: Makefile.am
test/sevmgr/: .gitignore  CMakeLists.txt  EventQueueManagementTestSuite.cpp  Makefile.am  sources.mk
