# sevmgr
include $(top_srcdir)/Makefile.common
include $(srcdir)/core/sources.mk

## Source directory

MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = basic bom factory command service config core batches python

EXTRA_DIST =


# Header files
nobase_pkginclude_HEADERS = $(sevmgr_service_h_sources)
#nobase_nodist_pkginclude_HEADERS = $(top_builddir)/@PACKAGE@/config.h

