## sevmgr/basic sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsevmgrbas.la

libsevmgrbas_la_SOURCES = $(sevmgr_bas_h_sources) $(sevmgr_bas_cc_sources) 
libsevmgrbas_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsevmgrbas_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/basic
#pkginclude_HEADERS = $(sevmgr_bas_h_sources)

