## sevmgr/bom sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsevmgrbom.la

libsevmgrbom_la_SOURCES = $(sevmgr_bom_h_sources) $(sevmgr_bom_cc_sources) 
libsevmgrbom_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsevmgrbom_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/bom
#pkginclude_HEADERS = $(sevmgr_bom_h_sources)

