## sevmgr/command sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsevmgrcmd.la

libsevmgrcmd_la_SOURCES = $(sevmgr_cmd_h_sources) $(sevmgr_cmd_cc_sources) 
libsevmgrcmd_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsevmgrcmd_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/command
#pkginclude_HEADERS = $(sevmgr_cmd_h_sources)

