## sevmgr/factory sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsevmgrfac.la

libsevmgrfac_la_SOURCES = $(sevmgr_fac_h_sources) $(sevmgr_fac_cc_sources) 
libsevmgrfac_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsevmgrfac_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/factory
#pkginclude_HEADERS = $(sevmgr_fac_h_sources)

