## sevmgr/command sub-directory
include $(top_srcdir)/Makefile.common
include $(srcdir)/sources.mk

#
noinst_LTLIBRARIES = libsevmgrsvc.la

libsevmgrsvc_la_SOURCES = $(sevmgr_svc_h_sources) $(sevmgr_svc_cc_sources) 
libsevmgrsvc_la_CXXFLAGS = $(STDAIR_CFLAGS)
libsevmgrsvc_la_LDFLAGS =

#
#pkgincludedir = $(includedir)/@PACKAGE@/service
#pkginclude_HEADERS = $(sevmgr_svc_h_sources)

